refactoring - disconnect SQL - simplify data load function

--- a/GUI/data_test.ipynb
+++ b/GUI/data_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +348,7 @@
        "19    13.0    19.0  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -404,12 +404,14 @@
     "                         df_wahl['Wahl 4'].value_counts(),\n",
     "                         df_wahl['Wahl 5'].value_counts(),\n",
     "                         df_wahl['Wahl 6'].value_counts()], axis=1)\n",
+    "\n",
+    "value_counts = value_counts.rename(columns={'Wahl 1': 'Wahl1', 'Wahl 2': 'Wahl2', 'Wahl 3': 'Wahl3', 'Wahl 4': 'Wahl4', 'Wahl 5': 'Wahl5', 'Wahl 6': 'Wahl6'})\n",
     "print(value_counts)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -789,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
