--- a/GUI/data_test.ipynb
+++ b/GUI/data_test.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Schülerdaten Einlesen (df_wahl)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 48,
    "metadata": {},
@@ -358,6 +365,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Explorative Datenanalyse\n",
+    "Arithmetische Auszählung der Wahlen bei Schülern\n",
+    "Ziel: Die Auswertung gibt Aufschluss darüber, welcher Kurs wieviele Events mindestens pro Fachrichtung benötigt werden.\n",
+    "\n",
+    "Erste Erkentnisse: \n",
+    "\n",
+    "1. Die Wahl 19 und 18 gehören zusammen (Finanzamt) Zusammen ergibt das mehr als 100 - Also muss Iterativ durch die Wahlen gearbeitet werden. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 53,
    "metadata": {},
@@ -407,6 +427,13 @@
     "\n",
     "value_counts = value_counts.rename(columns={'Wahl 1': 'Wahl1', 'Wahl 2': 'Wahl2', 'Wahl 3': 'Wahl3', 'Wahl 4': 'Wahl4', 'Wahl 5': 'Wahl5', 'Wahl 6': 'Wahl6'})\n",
     "print(value_counts)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Unternehmensliste einlesen (df_raum)"
    ]
   },
   {
